--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 	},
 	"dependencies": {
 		"lucide-react": "^0.552.0",
-		"next": "16.0.1",
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
+		"next": "^16.0.10",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
 		"sass": "^1.93.2"
 	},
 	"devDependencies": {
